tag: 0.2.0. Removed old files.

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -31,5 +31,6 @@ subjects:
 - !lcsh 'Bildungsromans'
 - !lcsh 'Alps -- Fiction'
 - !lcsh 'Italy -- Fiction'
+- GITenberg
 title: Wilhelm Meisters Wanderjahre — Band 2
 url: http://www.gutenberg.org/ebooks/2410
